:gb: Added humans.txt

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- <meta name="twitter:image" content="http://matthew.wagerfield.com/cursor/assets/images/thumbnail.png"> -->
 
     <!-- Humans -->
-    <!-- <link rel="author" href="humans.txt"> -->
+    <link rel="author" href="humans.txt">
 
     <!-- Styles -->
     <!-- <link rel="stylesheet" type="text/css" href="assets/styles/css/styles.css"> -->
