:gb: Added styles.css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="author" href="humans.txt">
 
     <!-- Styles -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/styles/css/styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
@@ -79,7 +79,10 @@
     </div>
 
     <!-- Scripts -->
+    <script src="cursors.js"></script>
     <script>
+
+
 
     // Twitter stuff.
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
@@ -92,7 +95,6 @@
     js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=709933052350821";
     fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-
     </script>
 
   </body>
